Rename column image and done (Customer and Empoyee) login function, Display personal informaition on customer and Employees.